simplq/src/styles/adminPage.module.scss
@import 'utils';

.header {
  @include queue-name-header();
}

.list {
  @include background-color();
}

.item-list {
}

.add-member {
  @include box-border();
}

.main-button-content {
  @include center-horizontally();
  & > div {
    margin: 0.5rem;
  }
}

.item {
  @include center-horizontally();
  background-color: white;
  max-width: 450px;
  margin: 30px auto;
  border: 2px solid $primary-color-dark;
  border-radius: 0.6rem;
  display: flex;
  justify-content: space-between;
  & > div {
    padding: 0;
  }
  button {
    margin: 0 .25rem;
  }
}

